--- a/popup.html
+++ b/popup.html
@@ -1,50 +1,127 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Top Shot Sniper Options</title>
-        <link rel="stylesheet" href="styles/popup_styles.css">
-    </head>
-    <body>
-        <div class="content">
-            <h1>Top Shot Sniper Options</h1>
-            <div class="container">
-                <label for="toggle"><b>Sniper Mode:</b></label>
-                <input type="checkbox" id="toggle">
-            </div>
-            <div class="container">
-                <h3>Custom Color 3 Digit Serials:</h3>
-                <select id="threeDigitColor">
-                    <option value="red">red</option>
-                    <option value="green">green</option>
-                    <option value="blue">blue</option>
-                    <option value="magenta">magenta</option>
-                </select>
-            </div>
-            <div class="container">
-                <h3>Custom Color 2 Digit Serials:</h3>
-                <select id="twoDigitColor">
-                    <option value="red">red</option>
-                    <option value="green">green</option>
-                    <option value="blue">blue</option>
-                    <option value="magenta">magenta</option>
-                </select>
-            </div>
-            <div class="container">
-                <h3>Custom Color 1 Digit Serials:</h3>
-                <select id="oneDigitColor">
-                    <option value="red">red</option>
-                    <option value="green">green</option>
-                    <option value="blue">blue</option>
-                    <option value="magenta">magenta</option>
-                </select>
-            </div>
-            <div class="container">
-                <h3>Donate:</h3>
-                <div id="donate"><a target="_blank" href="https://www.nbatopshot.com/user/@spencer">Gift a moment to @spencer</a></div>
-                <div id="status"></div>
-                <button id="save">Save</button>
-            </div>
+  <head>
+    <title>Top Shot Sniper</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/popup_styles.css" />
+  </head>
+  <body class="bg-black text-white px-6 py-4 overflow-hidden h-full">
+    <div class="w-full h-auto pt-2" style="width: 440px">
+      <div class="pb-2 w-48 h-auto">
+        <img
+          src="/static/img/top-shot-logo-horizontal-white.svg"
+          style="width: 100%; height: 100%"
+        />
+      </div>
+      <h2 class="text-lg py-2 text-accent0">Select your options below</h2>
+      <div
+        class="py-2 uppercase text-accent1 text-lg font-bold align-middle leading-3 tracking-wide"
+      >
+        <label class="pr-4" for="toggle">Sniper Mode</label>
+        <input
+          class="align-middle pl-2 leading-3"
+          type="checkbox"
+          id="toggle"
+        />
+      </div>
+      <!-- Coming soon: Serials to snipe -->
+      <!-- <div class="py-4">
+        <h3 class="text-accent0 text-lg pb-2">Serials to Snipe</h3>
+        <input
+          value=""
+          name="serialList"
+          type="text"
+          placeholder="Serials (separated by comma. e.g. 88, 393, 499)"
+          class="w-full h-12 px-6 text-lg"
+        />
+      </div> -->
+      <div class="py-4">
+        <h3 class="py-2 text-xl font-bold">Custom Colors</h3>
+
+        <div class="px-2 py-2">
+          <label class="block text-sm font-medium" for="threeDigitColor"
+            >3 Digit Serials</label
+          >
+          <select
+            id="threeDigitColor"
+            name="threeDigitColor"
+            class="text-black mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          >
+            <option value="red">red</option>
+            <option value="green">green</option>
+            <option value="blue">blue</option>
+            <option value="magenta">magenta</option>
+          </select>
         </div>
-        <script src="scripts/options.js"></script>
-    </body>
+
+        <div class="px-2 py-2">
+          <label class="block text-sm font-medium" for="twoDigitColor"
+            >2 Digit Serials</label
+          >
+          <select
+            id="twoDigitColor"
+            name="twoDigitColor"
+            class="text-black mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          >
+            <option value="red">red</option>
+            <option value="green">green</option>
+            <option value="blue">blue</option>
+            <option value="magenta">magenta</option>
+          </select>
+        </div>
+
+        <div class="px-2 py-2">
+          <label class="block text-sm font-medium" for="oneDigitColor"
+            >1 Digit Serials</label
+          >
+          <select
+            id="oneDigitColor"
+            name="oneDigitColor"
+            class="text-black mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+          >
+            <option value="red">red</option>
+            <option value="green">green</option>
+            <option value="blue">blue</option>
+            <option value="magenta">magenta</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="pb-6">
+        <h3 class="text-md text-bold uppercase">Donate a Moment</h3>
+        <div id="donate">
+          Gift a moment to
+          <a
+            class="text-blue-500 hover:text-blue-600 duration-500 transition opacity-100 hover:opacity-50"
+            target="_blank"
+            href="https://www.nbatopshot.com/user/@spencer"
+            >@spencer</a
+          >
+          and
+          <a
+            class="text-blue-500 hover:text-blue-600 duration-500 transition opacity-100 hover:opacity-50"
+            target="_blank"
+            href="https://www.nbatopshot.com/user/@robksawyer"
+            >@robksawyer</a
+          >
+        </div>
+        <div id="status" class="my-6 text-accent1 px-6 font-bold text-md"></div>
+
+        <div class="w-full py-2">
+          <button
+            class="uppercase font-bold w-full mx-auto py-2 px-4 border border-2 border-white bg-black text-sm font-medium text-white hover:border-gray-200"
+            id="save"
+          >
+            Save
+          </button>
+        </div>
+      </div>
+    </div>
+    <script src="scripts/options.js"></script>
+  </body>
 </html>
