Have it injecting some data

--- a/popup.html
+++ b/popup.html
@@ -30,18 +30,19 @@
         />
       </div>
       <!-- Coming soon: Serials to snipe -->
-      <!-- <div class="py-4">
+      <div class="py-3">
         <h3 class="text-accent0 text-lg pb-2">Serials to Snipe</h3>
         <input
           value=""
+          id="serialList"
           name="serialList"
           type="text"
           placeholder="Serials (separated by comma. e.g. 88, 393, 499)"
-          class="w-full h-12 px-6 text-lg"
+          class="bg-black border-accent3 border-2 w-full h-12 px-2 text-sm"
         />
-      </div> -->
-      <div class="py-4">
-        <h3 class="py-2 text-xl font-bold">Custom Colors</h3>
+      </div>
+      <div class="pt-2 pb-4">
+        <h3 class="py-2 text-lg font-normal text-accent0">Custom Colors</h3>
 
         <div class="grid grid-cols-3">
           <div class="px-2 py-2 select-container">
