--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
     <head>
         <title>Top Shot Helper Options</title>
         <link rel="stylesheet" href="styles/popup_styles.css">
+        <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="content">
@@ -66,38 +67,6 @@
                 <button id="save">Save</button>
             </div>
         </div>
-      </div>
-
-      <div class="pb-6">
-        <h3 class="text-md text-bold uppercase">Donate a Moment</h3>
-        <div id="donate">
-          Gift a moment to
-          <a
-            class="text-blue-500 hover:text-blue-600 duration-500 transition opacity-100 hover:opacity-50"
-            target="_blank"
-            href="https://www.nbatopshot.com/user/@spencer"
-            >@spencer</a
-          >
-          and
-          <a
-            class="text-blue-500 hover:text-blue-600 duration-500 transition opacity-100 hover:opacity-50"
-            target="_blank"
-            href="https://www.nbatopshot.com/user/@robksawyer"
-            >@robksawyer</a
-          >
-        </div>
-        <div id="status" class="my-6 text-accent1 px-6 font-bold text-md"></div>
-
-        <div class="w-full py-2">
-          <button
-            class="uppercase font-bold w-full mx-auto py-2 px-4 border border-2 border-white bg-black text-sm font-medium text-white hover:border-gray-200"
-            id="save"
-          >
-            Save
-          </button>
-        </div>
-      </div>
-    </div>
-    <script src="scripts/options.js"></script>
-  </body>
+        <script src="scripts/options.js"></script>
+    </body>
 </html>
