--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
             </div>
             <div class="windows">
                 <div class="container py-4">
-                    <h3>Close Browser: <input type="checkbox" id="closeBrowser"></h3>
+                    <h3>Close Browser (if the deal is no good): <input type="checkbox" id="closeBrowser"></h3>
                 </div>
                 <div class="container">
                     <h3>Customize 4 Digit Serials: <input type="checkbox" id="toggle4"></h3>
