Some indicator bug fixes

--- a/popup.html
+++ b/popup.html
@@ -12,49 +12,34 @@
                 <label for="toggle"><b>Sort Dropdown:</b></label>
                 <input type="checkbox" id="toggle">
             </div>
+            <div class="container my-4">
+                <label for="closeBrowser">Close Browser (if the deal is no good):</label>
+                <input type="checkbox" id="closeBrowser" class="ml-2">
+            </div>
             <div class="windows">
-                <div class="container py-4">
-                    <h3>Close Browser (if the deal is no good): <input type="checkbox" id="closeBrowser"></h3>
-                </div>
                 <div class="container">
-                    <h3>Customize 4 Digit Serials: <input type="checkbox" id="toggle4"></h3>
-                    <div>
-                        <label for="fourDigitColor">Color (Windows Only): </label>
-                        <input type="color" id="fourDigitColor" name="head" value="#00FF00" disabled>
-                    </div>
+                    <h3>4 Digit Serials: <input type="checkbox" id="toggle4"></h3>
                     <div>
                         <label for="fourDigitText">Text: </label>
                         <input maxlength="20" type="text" id="fourDigitText" disabled>
                     </div> 
                 </div>
                 <div class="container">
-                    <h3>Customize 3 Digit Serials: <input type="checkbox" id="toggle3"></h3>
-                    <div>
-                        <label for="threeDigitColor">Color (Windows Only): </label>
-                        <input type="color" id="threeDigitColor" name="head" value="#0000FF" disabled>
-                    </div>
+                    <h3>3 Digit Serials: <input type="checkbox" id="toggle3"></h3>
                     <div>
                         <label for="threeDigitText">Text: </label>
                         <input maxlength="20" type="text" id="threeDigitText" disabled>
                     </div> 
                 </div>
                 <div class="container">
-                    <h3>Customize 2 Digit Serials: <input type="checkbox" id="toggle2"></h3>
-                    <div>
-                        <label for="twoDigitColor">Color (Windows Only): </label>
-                        <input type="color" id="twoDigitColor" name="head" value="#FF0000" disabled>
-                    </div>
+                    <h3>2 Digit Serials: <input type="checkbox" id="toggle2"></h3>
                     <div>
                         <label for="twoDigitText">Text: </label>
                         <input maxlength="20" type="text" id="twoDigitText" disabled>
                     </div> 
                 </div>
                 <div class="container">
-                    <h3>Customize 1 Digit Serials: <input type="checkbox" id="toggle1"></h3>
-                    <div>
-                        <label for="oneDigitColor">Color (Windows Only): </label>
-                        <input type="color" id="oneDigitColor" name="head" value="#FF00FF" disabled>
-                    </div>
+                    <h3>1 Digit Serials: <input type="checkbox" id="toggle1"></h3>
                     <div>
                         <label for="oneDigitText">Text: </label>
                         <input maxlength="20" type="text" id="oneDigitText" disabled>
